# BugsLife_Mariela_Machuca_Palmeros

./: Board.cpp  Board.h  Bug.cpp  Bug.h  BugsLifeHistory.txt  CMakeLists.txt  Cell.cpp  Cell.h  Crawler.cpp  Crawler.h  Hopper.cpp  Hopper.h  Mac.cpp  Mac.h  Output.txt  bugs.txt  bugs2.txt  main.cpp
